--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,22 +14,25 @@ copyright: 'Copyright &copy; 2023 University of Arizona Data Science Institute'
 nav:
   - Home: index.md
   - Workshop Agenda: agenda.md
+  - Getting Started:
+    - ChatGPT: chatgpt.md
+    - Bing: bing.md  
+    - Bard: bard.md  
   - Prompt Engineering: 
     - Basic Prompt Enginering: chatgpt_prompts.md
     - Using APIs: openai_api.md
+  - Education:
+    - Education: education.md
+    - Ethics: ethics.md
+    - Daily Productivity: daily-productivity.md
+  - Research:
+    - AI Landscape: ai_landscape.md
     - Coding with CoPilot: github_copilot.md
     - OpenAI extensions: openai_extensions.md
-  - Search & Chat:
-    - Bing: bing.md  
-    - Bard: bard.md
-  - Productivity:
-    - Daily Productivity: daily-productivity.md
-  - External Applications:
-    - Research: private_research.md
-  - HuggingFace: 
-    - Models: huggingface_models.md
-    - Datasets: huggingface_datasets.md
-    - Gradio: huggingface_gradio.md  
+    - HuggingFace: 
+      - Models: huggingface_models.md
+      - Datasets: huggingface_datasets.md
+      - Gradio: huggingface_gradio.md  
 
 # Configuration
 imgwidth: 70px;
