--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - ChatGPT: chatgpt.md
     - Bing: bing.md  
     - Bard: bard.md  
+    - Poe: poe.md
   - Prompt Engineering: 
     - Basic Prompt Enginering: chatgpt_prompts.md
     - Daily Productivity: daily-productivity.md
